--- a/package.json
+++ b/package.json
@@ -90,7 +90,7 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom --setupFiles=\"./config/jest/setupTests.js\" --snapshotSerializers=\"enzyme-to-json/serializer\"",
+    "test": "node scripts/test.js --env=jsdom --snapshotSerializers=\"enzyme-to-json/serializer\"",
     "test:update-snapshots": "npm run test -- -u"
   },
   "browserslist": [
@@ -108,7 +108,8 @@
       "!src/**/*.d.ts"
     ],
     "setupFiles": [
-      "react-app-polyfill/jsdom"
+      "react-app-polyfill/jsdom",
+      "<rootDir>/config/jest/setupTests.js"
     ],
     "setupFilesAfterEnv": [],
     "testMatch": [
@@ -129,7 +130,7 @@
       "^.+\\.module\\.(css|sass|scss)$"
     ],
     "modulePaths": [
-      "/Users/jchatrny/Development/git/tescosw-workshop-final/src"
+      "./src"
     ],
     "moduleNameMapper": {
       "^react-native$": "react-native-web",
